log
Thu, Mar 27, 2025 10:00:31 PM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:38:12: error: expected expression before 'List'
     return List ;
            ^~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
